--- a/notebooks/row_filter_column_masking.ipynb
+++ b/notebooks/row_filter_column_masking.ipynb
@@ -27,11 +27,11 @@
    "outputs": [],
    "source": [
     "%sql \n",
-    "CREATE OR REPLACE FUNCTION main.jpg.country_row_filter(country STRING)\n",
+    "CREATE OR REPLACE FUNCTION main.jpg.simple_filter(country STRING)\n",
     "RETURN \n",
     "  is_account_group_member('tuanis_admins')\n",
     "  OR\n",
-    "  country IN (['Brazil', 'United States'])\n",
+    "  country IN ('Brazil', 'United States')\n",
     ";"
    ]
   },
