--- a/notebooks/row_filter_column_masking.ipynb
+++ b/notebooks/row_filter_column_masking.ipynb
@@ -3,6 +3,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bc67d436",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Configuration - Set your catalog and schema\n",
+    "catalog = \"main\"\n",
+    "schema = \"jpg\"\n",
+    "table_name = f\"{catalog}.{schema}.customers\"\n",
+    "filter_function = f\"{catalog}.{schema}.simple_filter\"\n",
+    "country_filter_function = f\"{catalog}.{schema}.country_row_filter\"\n",
+    "mask_function = f\"{catalog}.{schema}.mask_email\"\n",
+    "mapping_table = f\"{catalog}.{schema}.map_rls_country\"\n",
+    "\n",
+    "print(f\"Using catalog: {catalog}\")\n",
+    "print(f\"Using schema: {schema}\")\n",
+    "print(f\"Target table: {table_name}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "518210a0",
    "metadata": {
     "vscode": {
@@ -12,7 +33,8 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "select * from prod.uc_01_acl.customers"
+    "-- Query the customers table (before applying any filters)\n",
+    "SELECT * FROM ${table_name}"
    ]
   },
   {
@@ -27,7 +49,8 @@
    "outputs": [],
    "source": [
     "%sql \n",
-    "CREATE OR REPLACE FUNCTION main.jpg.simple_filter(country STRING)\n",
+    "-- Create a simple row filter function\n",
+    "CREATE OR REPLACE FUNCTION ${filter_function}(country STRING)\n",
     "RETURN \n",
     "  is_account_group_member('tuanis_admins')\n",
     "  OR\n",
@@ -47,8 +70,22 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "ALTER TABLE main.jpg.customers \n",
-    "SET ROW FILTER main.jpg.simple_filter ON (country);\n"
+    "-- Apply the row filter to the table\n",
+    "ALTER TABLE ${table_name} \n",
+    "SET ROW FILTER ${filter_function} ON (country);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50a35bcb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- Remove the row filter from the table\n",
+    "ALTER TABLE ${table_name} \n",
+    "DROP ROW FILTER;\n"
    ]
   },
   {
@@ -63,7 +100,8 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "CREATE TABLE main.jpg.map_rls_country (\n",
+    "-- Create a mapping table for row-level security\n",
+    "CREATE TABLE IF NOT EXISTS ${mapping_table} (\n",
     "  group STRING,\n",
     "  countries ARRAY<STRING>\n",
     ");"
@@ -81,7 +119,8 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "INSERT INTO main.jpg.map_rls_country (group, countries) VALUES\n",
+    "-- Insert sample data into the mapping table\n",
+    "INSERT INTO ${mapping_table} (group, countries) VALUES\n",
     "  ('northamer', ARRAY('USA', 'CANADA', 'MEXICO')),\n",
     "  ('europe', ARRAY('FR', 'SPAIN'));"
    ]
@@ -98,13 +137,14 @@
    "outputs": [],
    "source": [
     "%sql \n",
-    "CREATE OR REPLACE FUNCTION main.jpg.country_row_filter(country STRING)\n",
+    "-- Create an advanced row filter function using the mapping table\n",
+    "CREATE OR REPLACE FUNCTION ${country_filter_function}(country STRING)\n",
     "RETURN \n",
     "  is_account_group_member('tuanis_admins')\n",
     "  OR\n",
     "  EXISTS (\n",
     "    SELECT 1\n",
-    "    FROM prod.default.map_rls_country m\n",
+    "    FROM ${mapping_table} m\n",
     "    WHERE \n",
     "    array_contains(m.countries, country)\n",
     "    AND is_account_group_member(m.group)\n",
@@ -124,7 +164,8 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "CREATE OR REPLACE FUNCTION main.jpg.mask_email(email STRING)\n",
+    "-- Create a column masking function for email addresses\n",
+    "CREATE OR REPLACE FUNCTION ${mask_function}(email STRING)\n",
     "RETURN\n",
     "  IF(\n",
     "    is_account_group_member('tuanis_admins'),\n",
@@ -132,6 +173,32 @@
     "    CONCAT('***@', SPLIT(email, '@')[1])\n",
     "  )\n",
     ";\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0af9e4b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- Apply column masking to the email column\n",
+    "ALTER TABLE ${table_name}\n",
+    "ALTER COLUMN email SET MASK ${mask_function};\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94178a9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- Remove column masking from the email column\n",
+    "ALTER TABLE ${table_name}\n",
+    "ALTER COLUMN email DROP MASK;\n"
    ]
   }
  ],
