--- a/notebooks/csv_autoloader_batch.ipynb
+++ b/notebooks/csv_autoloader_batch.ipynb
@@ -12,6 +12,7 @@
         "- **Batch read** using standard Spark CSV reader for one-time or scheduled processing\n",
         "- **Schema inference** with automatic schema detection\n",
         "- **Efficient processing** of all files in a single batch operation\n",
+        "- **Data transformations** with calculated columns (age + id)\n",
         "\n",
         "## Difference from Streaming:\n",
         "- **Batch**: Reads all data at once, completes, and stops (this notebook)\n",
@@ -52,6 +53,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Read CSV Files Using Spark Batch Reader\n",
         "\n",
         "For batch processing, use the standard Spark CSV reader. This reads all files at once and is ideal for one-time loads or scheduled batch jobs.\n",
@@ -66,28 +74,19 @@
       "outputs": [],
       "source": [
         "# Read CSV files from volume using standard Spark batch reader\n",
-        "df = spark.read \\\n",
+        "df_raw = spark.read \\\n",
         "  .format(\"csv\") \\\n",
         "  .option(\"header\", \"true\") \\\n",
         "  .option(\"sep\", \",\") \\\n",
         "  .option(\"inferSchema\", \"true\") \\\n",
         "  .load(SOURCE_PATH)\n",
         "\n",
-        "# Display the data\n",
-        "display(df)\n",
+        "# Display the raw data\n",
+        "display(df_raw)\n",
         "\n",
         "# Show basic statistics\n",
-        "print(f\"Total rows: {df.count()}\")\n",
-        "df.printSchema()\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Write to Delta Table (Batch)\n",
-        "\n",
-        "Write all the data to a Delta table in a single batch operation.\n"
+        "print(f\"Total rows: {df_raw.count()}\")\n",
+        "df_raw.printSchema()\n"
       ]
     },
     {
@@ -96,13 +95,61 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Write to Delta table in batch mode\n",
-        "df.write \\\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Apply Transformations\n",
+        "\n",
+        "Add calculated columns and processing metadata:\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from pyspark.sql.functions import col, current_timestamp\n",
+        "\n",
+        "# Apply transformations\n",
+        "df_transformed = df_raw \\\n",
+        "  .withColumn(\"age_plus_id\", col(\"age\") + col(\"id\")) \\\n",
+        "  .withColumn(\"processed_timestamp\", current_timestamp())\n",
+        "\n",
+        "# Display the transformed data\n",
+        "display(df_transformed)\n",
+        "\n",
+        "# Show schema with new columns\n",
+        "print(\"\\\\nTransformed schema:\")\n",
+        "df_transformed.printSchema()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Write Transformed Data to Delta Table (Batch)\n",
+        "\n",
+        "Write all the transformed data to a Delta table in a single batch operation.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Write transformed data to Delta table in batch mode\n",
+        "df_transformed.write \\\n",
         "  .format(\"delta\") \\\n",
         "  .mode(\"overwrite\") \\\n",
         "  .saveAsTable(FULL_TABLE_NAME)\n",
         "\n",
-        "print(f\"Successfully wrote all data to {FULL_TABLE_NAME}\")\n"
+        "print(f\"Successfully wrote all transformed data to {FULL_TABLE_NAME}\")\n"
       ]
     },
     {
@@ -130,7 +177,7 @@
         "# Alternative: Append mode (uncomment to use)\n",
         "# This will add new rows to the existing table without deleting old data\n",
         "\n",
-        "# df.write \\\n",
+        "# df_transformed.write \\\n",
         "#   .format(\"delta\") \\\n",
         "#   .mode(\"append\") \\\n",
         "#   .saveAsTable(FULL_TABLE_NAME)\n",
