--- a/notebooks/csv_autoloader_streaming.ipynb
+++ b/notebooks/csv_autoloader_streaming.ipynb
@@ -11,7 +11,8 @@
         "## Key Features:\n",
         "- **Streaming read** with Auto Loader for incremental processing\n",
         "- **Schema evolution** with automatic schema detection and storage\n",
-        "- **Checkpoint management** for fault-tolerance and exactly-once processing\n"
+        "- **Checkpoint management** for fault-tolerance and exactly-once processing\n",
+        "- **Data transformations** with calculated columns (age + id)\n"
       ]
     },
     {
@@ -55,6 +56,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Read CSV Files Using Auto Loader (Streaming)\n"
       ]
     },
@@ -65,7 +73,7 @@
       "outputs": [],
       "source": [
         "# Read CSV files from volume using Auto Loader with schema location\n",
-        "df = spark.readStream \\\n",
+        "df_raw = spark.readStream \\\n",
         "  .format(\"cloudFiles\") \\\n",
         "  .option(\"cloudFiles.format\", \"csv\") \\\n",
         "  .option(\"cloudFiles.schemaLocation\", SCHEMA_LOCATION) \\\n",
@@ -73,7 +81,7 @@
         "  .option(\"sep\", CSV_SEPARATOR) \\\n",
         "  .load(SOURCE_PATH)\n",
         "\n",
-        "display(df)\n"
+        "display(df_raw)\n"
       ]
     },
     {
@@ -82,8 +90,31 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Write to Delta table with availableNow trigger (recommended for serverless)\n",
-        "query = df.writeStream \\\n",
+        "from pyspark.sql.functions import col, current_timestamp\n",
+        "\n",
+        "# Apply transformations\n",
+        "df_transformed = df_raw \\\n",
+        "  .withColumn(\"age_plus_id\", col(\"age\").cast(\"int\") + col(\"id\").cast(\"int\")) \\\n",
+        "  .withColumn(\"processed_timestamp\", current_timestamp())\n",
+        "\n",
+        "display(df_transformed)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Write Transformed Data to Delta Table\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Write transformed data to Delta table with availableNow trigger (recommended for serverless)\n",
+        "query = df_transformed.writeStream \\\n",
         "  .format(\"delta\") \\\n",
         "  .outputMode(\"append\") \\\n",
         "  .trigger(availableNow=True) \\\n",
