--- a/notebooks/lakeflow_sql_server_pipelines.ipynb
+++ b/notebooks/lakeflow_sql_server_pipelines.ipynb
@@ -96,6 +96,7 @@
     "connection_id = w.connections.get(connection_name).connection_id\n",
     "\n",
     "gateway_def = pipelines.IngestionGatewayPipelineDefinition(\n",
+    "      connection_name=connection_name,\n",
     "      connection_id=connection_id,\n",
     "      gateway_storage_catalog=stg_catalog_name, \n",
     "      gateway_storage_schema=stg_schema_name,\n",
