change to spark

--- a/notebooks/row_filter_column_masking.ipynb
+++ b/notebooks/row_filter_column_masking.ipynb
@@ -32,9 +32,8 @@
    },
    "outputs": [],
    "source": [
-    "%sql\n",
-    "-- Query the customers table (before applying any filters)\n",
-    "SELECT * FROM ${table_name}"
+    "# Query the customers table (before applying any filters)\n",
+    "spark.sql(f\"SELECT * FROM {table_name}\").display()"
    ]
   },
   {
@@ -48,14 +47,14 @@
    },
    "outputs": [],
    "source": [
-    "%sql \n",
-    "-- Create a simple row filter function\n",
-    "CREATE OR REPLACE FUNCTION ${filter_function}(country STRING)\n",
+    "# Create a simple row filter function\n",
+    "spark.sql(f\"\"\"\n",
+    "CREATE OR REPLACE FUNCTION {filter_function}(country STRING)\n",
     "RETURN \n",
     "  is_account_group_member('tuanis_admins')\n",
     "  OR\n",
     "  country IN ('Brazil', 'United States')\n",
-    ";"
+    "\"\"\")"
    ]
   },
   {
@@ -69,10 +68,11 @@
    },
    "outputs": [],
    "source": [
-    "%sql\n",
-    "-- Apply the row filter to the table\n",
-    "ALTER TABLE ${table_name} \n",
-    "SET ROW FILTER ${filter_function} ON (country);\n"
+    "# Apply the row filter to the table\n",
+    "spark.sql(f\"\"\"\n",
+    "ALTER TABLE {table_name} \n",
+    "SET ROW FILTER {filter_function} ON (country)\n",
+    "\"\"\")\n"
    ]
   },
   {
@@ -82,10 +82,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%sql\n",
-    "-- Remove the row filter from the table\n",
-    "ALTER TABLE ${table_name} \n",
-    "DROP ROW FILTER;\n"
+    "# Remove the row filter from the table\n",
+    "spark.sql(f\"\"\"\n",
+    "ALTER TABLE {table_name} \n",
+    "DROP ROW FILTER\n",
+    "\"\"\")\n"
    ]
   },
   {
@@ -99,12 +100,13 @@
    },
    "outputs": [],
    "source": [
-    "%sql\n",
-    "-- Create a mapping table for row-level security\n",
-    "CREATE TABLE IF NOT EXISTS ${mapping_table} (\n",
+    "# Create a mapping table for row-level security\n",
+    "spark.sql(f\"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS {mapping_table} (\n",
     "  group STRING,\n",
     "  countries ARRAY<STRING>\n",
-    ");"
+    ")\n",
+    "\"\"\")"
    ]
   },
   {
@@ -118,11 +120,12 @@
    },
    "outputs": [],
    "source": [
-    "%sql\n",
-    "-- Insert sample data into the mapping table\n",
-    "INSERT INTO ${mapping_table} (group, countries) VALUES\n",
+    "# Insert sample data into the mapping table\n",
+    "spark.sql(f\"\"\"\n",
+    "INSERT INTO {mapping_table} (group, countries) VALUES\n",
     "  ('northamer', ARRAY('USA', 'CANADA', 'MEXICO')),\n",
-    "  ('europe', ARRAY('FR', 'SPAIN'));"
+    "  ('europe', ARRAY('FR', 'SPAIN'))\n",
+    "\"\"\")"
    ]
   },
   {
@@ -136,20 +139,20 @@
    },
    "outputs": [],
    "source": [
-    "%sql \n",
-    "-- Create an advanced row filter function using the mapping table\n",
-    "CREATE OR REPLACE FUNCTION ${country_filter_function}(country STRING)\n",
+    "# Create an advanced row filter function using the mapping table\n",
+    "spark.sql(f\"\"\"\n",
+    "CREATE OR REPLACE FUNCTION {country_filter_function}(country STRING)\n",
     "RETURN \n",
     "  is_account_group_member('tuanis_admins')\n",
     "  OR\n",
     "  EXISTS (\n",
     "    SELECT 1\n",
-    "    FROM ${mapping_table} m\n",
+    "    FROM {mapping_table} m\n",
     "    WHERE \n",
     "    array_contains(m.countries, country)\n",
     "    AND is_account_group_member(m.group)\n",
     "  )\n",
-    ";\n"
+    "\"\"\")\n"
    ]
   },
   {
@@ -163,16 +166,16 @@
    },
    "outputs": [],
    "source": [
-    "%sql\n",
-    "-- Create a column masking function for email addresses\n",
-    "CREATE OR REPLACE FUNCTION ${mask_function}(email STRING)\n",
+    "# Create a column masking function for email addresses\n",
+    "spark.sql(f\"\"\"\n",
+    "CREATE OR REPLACE FUNCTION {mask_function}(email STRING)\n",
     "RETURN\n",
     "  IF(\n",
     "    is_account_group_member('tuanis_admins'),\n",
     "    email,\n",
     "    CONCAT('***@', SPLIT(email, '@')[1])\n",
     "  )\n",
-    ";\n"
+    "\"\"\")\n"
    ]
   },
   {
@@ -182,10 +185,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%sql\n",
-    "-- Apply column masking to the email column\n",
-    "ALTER TABLE ${table_name}\n",
-    "ALTER COLUMN email SET MASK ${mask_function};\n"
+    "# Apply column masking to the email column\n",
+    "spark.sql(f\"\"\"\n",
+    "ALTER TABLE {table_name}\n",
+    "ALTER COLUMN email SET MASK {mask_function}\n",
+    "\"\"\")\n"
    ]
   },
   {
@@ -195,10 +199,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%sql\n",
-    "-- Remove column masking from the email column\n",
-    "ALTER TABLE ${table_name}\n",
-    "ALTER COLUMN email DROP MASK;\n"
+    "# Remove column masking from the email column\n",
+    "spark.sql(f\"\"\"\n",
+    "ALTER TABLE {table_name}\n",
+    "ALTER COLUMN email DROP MASK\n",
+    "\"\"\")\n"
    ]
   }
  ],
